# grpc_video_server

./: Cargo.toml  build.rs
proto/: file_service.proto  upload.proto
src/: client_.rs  lib.rs  main.rs  server_.rs
src/client/: client.rs
src/models/: file.rs  file_client.rs  file_server.rs  mod.rs
src/server/: server.rs
src/utils/: addr.rs
