[package]
name = "grpc_video_server"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.13.0"


prost = "0.13"
tokio = { version = "1.0", features = ["full"] }


[build-dependencies]
tonic-build = "*"


[[bin]]
name = "helloworld-server"
path = "src/server.rs"

[[bin]]
name = "helloworld-client"
path = "src/client.rs"
